@@ -29,11 +29,7 @@ fi],[sim_trapdump=""])dnl
 AC_SUBST(sim_trapdump)
 
 SIM_AC_OPTION_HARDWARE(always,"","")
-
-if test -z "$SIM_DV_SOCKSER_O"; then
-	AC_MSG_ERROR([Sorry, but hardware support in this simulator
-unconditionally relies on dv-sockser.o which is unavailable for your host.
-Please fix this simulator.])
-fi
+frv_extra_objs="$SIM_DV_SOCKSER_O"
+AC_SUBST(frv_extra_objs)
 
 SIM_AC_OUTPUT
